# connect-four

./: .cosmic-ray-config.toml  .ruff.toml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: renovate.json
.github/workflows/: lint-and-test.yaml  mutation-test.yaml  renovate.yaml  test.yaml
config/nats/: games-stream.json
src/connect_four/: __init__.py
src/connect_four/application/command_processors/: __init__.py  create_game.py  end_game.py  lose_on_time.py  make_move.py  try_to_lose_by_time.py  try_to_lose_on_time.py
src/connect_four/application/common/: __init__.py  centrifugo_client.py  event_publisher.py  exceptions.py  game_gateway.py  identity_provider.py  task_scheduler.py  transaction_manager.py
src/connect_four/domain/: __init__.py  identitifiers.py
src/connect_four/domain/constants/: __init__.py  board.py  chip_type.py  communication_type.py  game_status.py  move_rejection_reason.py
src/connect_four/domain/models/: __init__.py  chip_location.py  game.py  move.py  move_result.py  player_state.py
src/connect_four/domain/services/: __init__.py  create_game.py  end_game.py  make_move.py  try_to_lose_by_time.py  try_to_lose_on_time.py
src/connect_four/infrastructure/: event_publisher.py  identity_provider.py  ioc_container.py  redis_config.py
src/connect_four/main/: cli.py  message_consumer.py  task_executor.py  task_scheduler.py
src/four_in_a_row/domain/: __init__.py  identitifiers.py
src/four_in_a_row/infrastructure/: __init__.py  event_publisher.py  identity_provider.py  ioc_container.py  operation_id.py  redis_config.py
src/four_in_a_row/main/: cli.py  message_consumer.py  task_executor.py  web_api.py
systemd/: connect_four.message_consumer.service  connect_four.task_executor.service  connect_four.task_scheduler.service  four_in_a_row.message_consumer.service  four_in_a_row.task_executor.service  four_in_a_row.web_api.service
tests/: conftest.py
tests/application/command_processors/: fakes.py  test_create_game.py  test_end_game.py  test_lose_on_time.py  test_try_to_lose_by_time.py  test_try_to_lose_on_time.py
tests/domain/services/: test_make_move.py
tests/infrastructure/database/: test_game_mapper.py
tests/infrastructure/message_broker/: test_event_publisher.py
tests/infrastructure/message_consumer/: test_event_publisher.py
tests/presentation/message_consumer/: test_ioc_container.py  test_routes.py
tests/presentation/task_executor/: test_executors.py  test_ioc_container.py
(+88 files in other folders)
