[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "four_in_a_row"
description = "Four in a row game."
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "uuid7==0.1.*",
    "redis==5.2.*",
    "nats-py==2.9.*",
    "httpx==0.28.*",
    "dishka==1.4.*",
    "adaptix==3.0.b9",
    "cyclopts==3.0.*",
    "faststream[nats]==0.5.*",
    "taskiq==0.11.*",
    "taskiq-redis==1.0.*",
    "taskiq-nats==0.5.*",
]

[project.optional-dependencies]
dev = [
    "mypy==1.14.*",
    "ruff==0.8.*",
    "pre-commit==4.0.*",
    "pytest==8.3.*",
    "pytest-asyncio==0.25.*",
]

[project.scripts]
four-in-a-row = "four_in_a_row.main.cli:main"
