[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "connect_four"
description = "Connect four game."
version = "0.1.0"
requires-python = "==3.13.*"

dependencies = [
    "uuid7==0.1.*",
    "python-json-logger==4.0.*",
    "redis==7.1.*",
    "nats-py==2.12.*",
    "httpx==0.28.*",
    "dishka==1.8.*",
    "dishka-cyclopts==1.0.*",
    "adaptix==3.0.0b11",
    "cyclopts==4.5.*",
    "faststream[nats,cli]==0.6.*",
    "taskiq==0.12.*",
    "taskiq-redis==1.2.*",
    "taskiq-nats==0.6.*",
    "tenacity==9.1.*",
]

[project.optional-dependencies]
dev = [
    "mypy==1.19.*",
    "ruff==0.14.*",
    "pre-commit==4.5.*",
    "pytest==9.0.*",
    "pytest-asyncio==1.3.*",
    "pytest-cov==7.0.*",
    "cosmic-ray==8.4.*",
]

[project.scripts]
connect-four = "connect_four.main.cli:main"
